Fixed position of artist-container second item by setting align-items to flex-start

--- a/css/index.css
+++ b/css/index.css
@@ -132,7 +132,7 @@ body {
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
-  align-items: center;
+  align-items: flex-start;
   padding: 0 0 0 0;
   margin: 0 0 2% 0;
 }
@@ -150,6 +150,9 @@ body {
 .artists-container div .bio {
   text-align: center;
   font-size: 0.7rem;
+}
+hr {
+  border-width: 1px;
 }
 #ctaArea {
   display: flex;
