--- a/less/main.less
+++ b/less/main.less
@@ -11,7 +11,7 @@ body {
 
 .artists-container {
 
-    .order(row,space-evenly,center);
+    .order(row,space-evenly,flex-start);
     .space(0 0 0 0, 0 0 2% 0);
 
     div {
@@ -39,3 +39,8 @@ body {
 
 }
 
+hr {
+
+    border-width: 1px;
+
+}
